--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma Antiga</title>
-    <link rel="stylesheet" href="../historia_roma/css/estilo.css">
+    <link rel="stylesheet" href="../historia_roma/estilo.css">
 </head>
 
 <body>
