--- a/index.html
+++ b/index.html
@@ -22,8 +22,44 @@
             </div>
         </nav>
         <div class="headline">
-            <h2 style="font-size: 80px;">Roma Antiga</h2>
-            <h2 style="letter-spacing:5px">Violencia no mundo romano</h2>
+            <h2 style="font-size: 90px;">Roma Antiga</h2>
+            <h2 style="letter-spacing:5px">Violência no Mundo Romano</h2>
         </div>
+    </div>
+    <section>
+        <h2>Conteudos abordados</h2>
+        <div class="serviços">
+
+            <div class="card">
+                <img src="imagens/museu.png">
+                <div class="card-text">
+                    <h3>desenvolvimento de site</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                </div>
+                <div class="texto-oculto">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="imagens/capacete.png">
+                <div class="card-text">
+                    <h3>desenvolvimento de site</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                </div>
+                <div class="texto-oculto">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="logo-rodape">
+            <h1 class="materia">História</h1>
+            <p style="color:#F2E6CE">Violência no Mundo Romano</p>
+        </div>
+        
+    </footer>
         
 </html>
