--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roma Antiga</title>
     <link rel="stylesheet" href="../historia_roma/estilo.css">
+    <link rel="stylesheet" href="../historia_roma/responsivo.css">
 </head>
 
 <body>
