--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
                 <h1>História</h1>
             </div>
             <div class="menu">
-                <a href="#">link</a>
-                <a href="#">link</a>
-                <a href="#">link</a>
-                <a href="#">link</a>
+                <a href="#">Tópicos</a>
+                <a href="#">Indicações</a>
+                <a href="#">Referências</a>
             </div>
         </nav>
         <div class="headline">
             <h2 style="font-size: 90px;">Roma Antiga</h2>
             <h2 style="letter-spacing:5px">Violência no Mundo Romano</h2>
+            <a href="#" class="contact-btn">INICIAR</a>
         </div>
     </div>
     <section>
-        <h2>Conteudos abordados</h2>
+        <h2>Conteúdos Abordados</h2>
         <div class="serviços">
 
             <div class="card">
                 <img src="imagens/museu.png">
                 <div class="card-text">
-                    <h3>desenvolvimento de site</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                    <h3>Roma Antiga - Origem</h3>
+                    <p>A violência no Mundo Romano era um aspecto complexo e multifacetado da sociedade, que se manifestava de diversas formas, desde a violência política e social até a violência nas arenas e na vida cotidiana. </p>
                 </div>
                 <div class="texto-oculto">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
@@ -45,8 +45,8 @@
             <div class="card">
                 <img src="imagens/capacete.png">
                 <div class="card-text">
-                    <h3>desenvolvimento de site</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
+                    <h3>Roma Antiga e a Atualidade</h3>
+                    <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
                 </div>
                 <div class="texto-oculto">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto cupiditate consequatur omnis dolores eveniet fugiat aspernatur accusamus eligendi nostrum ipsam temporibus excepturi ex, ullam officiis suscipit et a? Dolor, in.</p>
@@ -60,7 +60,6 @@
             <h1 class="materia">História</h1>
             <p style="color:#F2E6CE">Violência no Mundo Romano</p>
         </div>
-        
     </footer>
         
 </html>
