--- a/conteudos/introdução.html
+++ b/conteudos/introdução.html
@@ -1,38 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roma Antiga</title>
-    <link rel="stylesheet" href="../historia_roma/estilo.css">
-    <link rel="stylesheet" href="../historia_roma/responsivo.css">
+    <title>Introdução</title>
+    <link rel="stylesheet" href="/historia/historia_roma/estilo.css">
+    <link rel="stylesheet" href="/historia/historia_roma/responsivo.css">
 </head>
 
 <body>
-    <div class="fundo_menu ">
-        <nav class="barra_navegaçao fundo_barra_navegaçao">
-            <div class="logo"> 
-                <h1>História</h1>
-            </div>
-            <div class="menu">
-                <a href="../historia_roma/barra_de_menu/topicos.html">Tópicos</a>
-                <a href="../historia_roma/barra_de_menu/indicaçoes.html">Indicações</a>
-                <a href="../historia_roma/barra_de_menu/referencias.html">Referências</a>
-            </div>
-        </nav>
-        <div class="headline">
-            <h2 style="font-size: 90px;">Roma Antiga</h2>
-            <h2 style="letter-spacing:5px">Violência no Mundo Romano</h2>
-            <a href="../historia_roma/conteudos/introdução.html" class="contact-btn">INICIAR</a>
-        </div>
-    </div>
     <section>
-        <h2>Conteúdos Abordados</h2>
+        <h2>Introdução</h2>
         <div class="serviços">
 
             <div class="card">
-                <img src="imagens/museu.png">
+                <img src="/historia/historia_roma/imagens/museu.png">
                 <div class="card-text">
                     <h3>Roma Antiga - Origem</h3>
                     <p>A violência no Mundo Romano era um aspecto complexo e multifacetado da sociedade, que se manifestava de diversas formas, desde a violência política e social até a violência nas arenas e na vida cotidiana. </p>
@@ -43,7 +25,7 @@
             </div>
 
             <div class="card">
-                <img src="imagens/capacete.png">
+                <img src="/historia/historia_roma/imagens/capacete.png">
                 <div class="card-text">
                     <h3>Roma Antiga e a Atualidade</h3>
                     <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
@@ -53,13 +35,17 @@
                 </div>
             </div>
 
+            <div class="card">
+                <img src="/historia/historia_roma/imagens/capacete.png">
+                <div class="card-text">
+                    <h3>Roma Antiga e a Atualidade</h3>
+                    <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
+                </div>
+                <div class="texto-oculto">
+                    <p>Nesta página, vamos explorar como a violência no mundo romano se relaciona com a violência nos tempos atuais, abordando alguns tópicos reflexivos sobre essa conexão.</p>
+                </div>
+            </div>
         </div>
     </section>
-    <footer>
-        <div class="logo-rodape">
-            <h1 class="materia">História</h1>
-            <p style="color:#F2E6CE">Violência no Mundo Romano</p>
-        </div>
-    </footer>
-        
+</body>
 </html>
