--- a/conteudos/introdução.html
+++ b/conteudos/introdução.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução</title>
-    <link rel="stylesheet" href="/historia/historia_roma/estilo.css">
-    <link rel="stylesheet" href="/historia/historia_roma/responsivo.css">
+    <link rel="stylesheet" href="../estilo.css">
+    <link rel="stylesheet" href="../responsivo.css">
 </head>
 
 <body>
