--- a/conteudos/introdução.html
+++ b/conteudos/introdução.html
@@ -14,7 +14,7 @@
         <div class="serviços">
 
             <div class="card">
-                <img src="/historia/historia_roma/imagens/museu.png">
+                <img src="../imagens/museu.png">
                 <div class="card-text">
                     <h3>Roma Antiga - Origem</h3>
                     <p>A violência no Mundo Romano era um aspecto complexo e multifacetado da sociedade, que se manifestava de diversas formas, desde a violência política e social até a violência nas arenas e na vida cotidiana. </p>
@@ -25,7 +25,7 @@
             </div>
 
             <div class="card">
-                <img src="/historia/historia_roma/imagens/capacete.png">
+                <img src="../imagens/capacete.png">
                 <div class="card-text">
                     <h3>Roma Antiga e a Atualidade</h3>
                     <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
@@ -36,7 +36,7 @@
             </div>
 
             <div class="card">
-                <img src="/historia/historia_roma/imagens/capacete.png">
+                <img src="../imagens/museu.png">
                 <div class="card-text">
                     <h3>Roma Antiga e a Atualidade</h3>
                     <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
