--- a/conteudos/introdução.html
+++ b/conteudos/introdução.html
@@ -11,41 +11,25 @@
 <body>
     <section>
         <h2>Introdução</h2>
+        <h3 style="text-align: center ; font-size: 20px;">Para uma melhor compreensão, abordaremos os três principais períodos da Roma Antiga:</h3>
         <div class="serviços">
-
-            <div class="card">
-                <img src="../imagens/museu.png">
-                <div class="card-text">
-                    <h3>Roma Antiga - Origem</h3>
-                    <p>A violência no Mundo Romano era um aspecto complexo e multifacetado da sociedade, que se manifestava de diversas formas, desde a violência política e social até a violência nas arenas e na vida cotidiana. </p>
-                </div>
-                <div class="texto-oculto">
-                    <p>Nesta página, discutiremos um pouco sobre essas formações sociais e políticas, uma vez que estão associadas à violência.</p>
-                </div>
+            <div class="card-simples-claro">
+                <img src="../imagens/coroa.png">
+                <h3>Monarquia</h3>
+                <p>A Monarquia de Roma, que durou de 753 a.C. a 509 a.C., foi o período inicial da história romana, caracterizado pelo governo de reis e pelos primeiros desenvolvimentos urbanos e institucionais da cidade.</p>
             </div>
-
-            <div class="card">
+            <div class="card-simples-claro">
                 <img src="../imagens/capacete.png">
-                <div class="card-text">
-                    <h3>Roma Antiga e a Atualidade</h3>
-                    <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
-                </div>
-                <div class="texto-oculto">
-                    <p>Nesta página, vamos explorar como a violência no mundo romano se relaciona com a violência nos tempos atuais, abordando alguns tópicos reflexivos sobre essa conexão.</p>
-                </div>
+                    <h3>República</h3>
+                    <p>A República Romana foi marcada por um sistema de governo baseado em instituições republicanas, com um complexo equilíbrio de poder entre magistraturas, senado e assembleias populares.</p>
             </div>
-
-            <div class="card">
-                <img src="../imagens/museu.png">
-                <div class="card-text">
-                    <h3>Roma Antiga e a Atualidade</h3>
-                    <p>A relação entre a violência no mundo romano e os tempos atuais pode ser examinada sob diversas perspectivas como o impacto cultural, as formas de violência e as respostas institucionais e sociais.</p>
-                </div>
-                <div class="texto-oculto">
-                    <p>Nesta página, vamos explorar como a violência no mundo romano se relaciona com a violência nos tempos atuais, abordando alguns tópicos reflexivos sobre essa conexão.</p>
-                </div>
+            <div class="card-simples-claro">
+                <img src="../imagens/louro.png">
+                    <h3>Império</h3>
+                    <p>O Império Romano foi uma era de governo centralizado sob imperadores, com grande expansão territorial e avanços na administração e no sistema legal. Aconteceu no Oriente e Ocidente (27 a.C. até 1453 d.C.) </p>
             </div>
         </div>
+        <a href="#" class="contact-btn" style="top: 102%; left: 45%;">PRÓXIMO</a>
     </section>
 </body>
 </html>
