--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="headline">
             <h2 style="font-size: 90px;">Roma Antiga</h2>
             <h2 style="letter-spacing:5px">Violência no Mundo Romano</h2>
-            <a href="../historia_roma/conteudos/introdução.html" class="contact-btn">INICIAR</a>
+            <a href="../historia_roma/conteudos/intro_roma.html" class="contact-btn">INICIAR</a>
         </div>
     </div>
     <section>
