--- a/conteudos/intro_roma.html
+++ b/conteudos/intro_roma.html
@@ -32,7 +32,7 @@
         </div>
         <div>
             <a href="../index.html" class="contact-btn">Menu</a>
-            <a href="../conteudos/monarquia.html" class="contact-btn" style="right: 80px;">PROXIMO</a>
+            <a href="../conteudos/monarquia.html" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
         </div>
     </div>
     
