--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -13,9 +13,16 @@
             <h2>MONARQUIA</h2>
         </div>
         
-        <div>
-            <h1>ko</h1>
-            <img width="500" src="../imagens/monarquia2.png">
+        <div class="container">
+            <img width="500" src="../imagens/romulo.png">
+            <p>A tradição relata que Roma foi fundada em 753 a.C. por Rômulo e Remo, gêmeos que foram criados por uma loba. O primeiro rei de Roma foi Rômulo, e a cidade foi governada por um total de sete reis. Entre esses reis, os quatro primeiros eram latinos e sabinos, enquanto os três últimos eram etruscos. Esse período inicial de governantes destaca a influência e a contribuição desses três grupos na formação do povo romano.</p>
+            <p>Na sociedade romana a época da Monarquia era formada basicamente por dois grupos: Patrícios e Plebeus.</p>
+            <div class="card-simples-escuro" style="width: 50% ; padding:20px ">
+                <div class="card-text">
+                    <h3>Monarquia</h3>
+                    <p>jk</p>
+                </div>
+            </div>
         </div>
     </div>
     
