--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -19,18 +19,30 @@
             <p>Na sociedade romana a época da Monarquia era formada basicamente por dois grupos: Patrícios e Plebeus.</p>
             <div class="card-simples-escuro" style="width: 50% ; padding:20px ">
                 <div class="card-text">
-                    <h3>Monarquia</h3>
-                    <p>jk</p>
+                    <h3 style="text-decoration: underline;">Patrícios</h3>
+                    <p>Os patrícios formavam uma aristocracia de Sangue, possuíam mais riquezas em terras e gado, e por muito tempo apenas eles podiam lutar no exército. 
+                    </p>
                 </div>
             </div>
             <img width="500" height="300" src="../imagens/romulo2.png">
             <div class="card-simples-escuro" style="width: 50% ; padding:20px ">
                 <div class="card-text">
-                    <h3>Monarquia</h3>
-                    <p>jk</p>
+                    <h3 style="text-decoration: underline;">Pebleus</h3>
+                    <p>Os plebeus eram, em sua maioria, agricultores ou artesãos. Muitos deles eram clientes dos patrícios, ou seja, trabalhavam nas terras dos patrícios em troca de proteção financeira e jurídica. Durante o início da República, os plebeus não tinham direito de participar do governo da cidade, o que gerava tensões sociais significativas.</p>
+                    <p>Naquele período, havia poucos escravos em Roma, sendo mais comum a escravidão por dívidas. No entanto, o número de escravos aumentou rapidamente à medida que Roma expandia seu território através de guerras de conquista no Mediterrâneo.</p>
                 </div>
             </div>
-        </div>
+         </div>
+    <h1>SENADO</h1>
+    <p>O Senado era o conselho que reunia os líderes das famílias patrícias de Roma, e sua principal função era eleger o rei. No entanto, o poder do rei não era absoluto. </p>
+    <lu>
+        <li><strong>CONSELHO DO REI:</strong>O Senado oferecia conselhos ao rei e ajudava na administração dos assuntos públicos. Embora o rei tivesse autoridade suprema, as opiniões e recomendações do Senado eram consideradas valiosas.</li>
+        <li><strong>LEGISLAÇÃO E JUSTIÇA:</strong>O Senado também tinha um papel na formulação de leis e na supervisão de questões judiciais, embora o rei mantivesse a autoridade final sobre a justiça.</li>
+    </lu>
+    <div>
+        <a href="../conteudos/intro_roma.html" class="contact-btn">VOLTAR</a>
+        <a href="../conteudos/republica.html" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
+    </div>
     </div>
     
 </body>
