--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -24,6 +24,8 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="container" style="margin-top: 0px;">
             <img width="500" height="300" src="../imagens/romulo2.png">
             <div class="card-simples-escuro" style="width: 50% ; padding:20px ">
                 <div class="card-text">
@@ -32,7 +34,7 @@
                     <p>Naquele período, havia poucos escravos em Roma, sendo mais comum a escravidão por dívidas. No entanto, o número de escravos aumentou rapidamente à medida que Roma expandia seu território através de guerras de conquista no Mediterrâneo.</p>
                 </div>
             </div>
-         </div>
+        </div>
     <h1>SENADO</h1>
     <p>O Senado era o conselho que reunia os líderes das famílias patrícias de Roma, e sua principal função era eleger o rei. No entanto, o poder do rei não era absoluto. </p>
     <lu>
@@ -41,7 +43,7 @@
     </lu>
     <div>
         <a href="../conteudos/intro_roma.html" class="contact-btn">VOLTAR</a>
-        <a href="../conteudos/republica.html" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
+        <a href="../conteudos/" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
     </div>
     </div>
     
