--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -43,7 +43,7 @@
     </lu>
     <div>
         <a href="../conteudos/intro_roma.html" class="contact-btn">VOLTAR</a>
-        <a href="../conteudos/" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
+        <a href="../conteudos/republica.html" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
     </div>
     </div>
     
