--- a/conteudos/republica.html
+++ b/conteudos/republica.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../estilo_conteudo.css">
 </head>
 <body>
-    <div class="margem"><
+    <div class="margem">
 
         <div class="titulo">
             <h2>REPÚBLICA</h2>
