--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -29,7 +29,7 @@
             <img width="500" height="300" src="../imagens/romulo2.png">
             <div class="card-simples-escuro" style="width: 50% ; padding:20px ">
                 <div class="card-text">
-                    <h3 style="text-decoration: underline;">Pebleus</h3>
+                    <h3 style="text-decoration: underline;">Plebeus</h3>
                     <p>Os plebeus eram, em sua maioria, agricultores ou artesãos. Muitos deles eram clientes dos patrícios, ou seja, trabalhavam nas terras dos patrícios em troca de proteção financeira e jurídica. Durante o início da República, os plebeus não tinham direito de participar do governo da cidade, o que gerava tensões sociais significativas.</p>
                     <p>Naquele período, havia poucos escravos em Roma, sendo mais comum a escravidão por dívidas. No entanto, o número de escravos aumentou rapidamente à medida que Roma expandia seu território através de guerras de conquista no Mediterrâneo.</p>
                 </div>
