--- a/conteudos/republica.html
+++ b/conteudos/republica.html
@@ -12,7 +12,6 @@
         <div class="titulo">
             <h2>REPÚBLICA</h2>
         </div>
-        
         <div class="container">
             <img width="500" src="../imagens/republica.png">
             <p>Durante o período republicano, a estrutura de poder em Roma estava centralizada em três instituições principais: o Senado, as assembleias (comitia) e as magistraturas. Essas instituições desempenhavam papéis distintos e complementares na administração e no governo da cidade.</p>
@@ -30,6 +29,32 @@
                 <li><strong>MAGISTRATURAS:</strong></li>
                 <p>As magistraturas eram cargos executivos, como os cônsules e pretores, que desempenhavam funções de governo e administração. Esses magistrados eram eleitos pelas assembleias e eram responsáveis pela execução das leis e pela administração da justiça.</p>
             </lu>
+            <div class="card-simples-escuro" style="width: 50% ; padding:10px ; text-align: center">
+                <div class="card-text">
+                    <p>A participação política dos cidadãos era exercida predominantemente nas assembleias, que eram vetadas às mulheres e aos escravos.</p>
+                </div>
+            </div>
         </div>
+        <div>
+            <h1>MOVIMENTOS SOCIAIS</h1>
+            <p>As desigualdades políticas entre patrícios e plebeus geraram muitos conflitos sociais, pois, embora muitos plebeus tivessem riquezas e formassem grande parte das forças militares necessárias à proteção da cidade, estavam excluídos dos principais cargos públicos. As lutas entre os patrícios e plebeus marcaram o período republicano. Em 494 a.C., centenas de plebeus se rebelaram e se retiraram para o Monte sagrado E ameaçaramnao lutar mais no exército, caso suas reivindicações não fosse atendidas. Entre diversas exigências, a camadas populares alcançaram o direito de eleger seus próprios magistrados, <strong>os Tribunos da Plebe</strong>. Sua pessoa era inviolável e disponha de poder de veto, isto é, Poderá suspender a aplicação de atos dos magistrados ou das decisões do senado que considerasse contrárias aos interesses dos plebeus.</p>
+            <p>Outra Importante conquista, em 451 antes de Cristo, foi a publicação de leis escritas, que asseguraram a igualdade jurídica entre patrícios e plebeus. Gravadas em placas de bronze  e expostas no fórum para conhecimento de toda a população, as <strong>leis das Doze Tábuas</strong> constituíram um dos fundamentos do direito romano.</p>
+            <h1>A REPÚBLICA IMPERALISTA</h1>
+            <p>A política expansionista da república romana teve inicialmente com objetivos básicos a defesa diante de povos vizinhos rivais e a obtenção de terras necessárias à agricultura e ao pastoreio, mas logo se revelou uma fonte de riqueza em metais preciosos e escravos. Como resultado, em cinco séculos de guerra a dominação romana se estendeu a boa parte da Europa, da ásia e da África.</p>
+            <lu>
+                <li><strong>GUERRAS PÚNICAS:</strong></li>
+                <p>As Guerras Púnicas foram uma série de conflitos entre Roma e Cartago, ocorridos nos séculos III e II a.C. Essas guerras foram motivadas pela rivalidade das duas cidades pelo domínio do comércio no mar Mediterrâneo e pela posse da Sicília. Ao final dessas guerras, Roma conseguiu destruir Cartago e se estabeleceu como a principal potência no Mediterrâneo.</p>
+                <p>No total, houve três guerras entre romanos e cartaginenses: a Primeira Guerra Púnica, a Segunda Guerra Púnica e a Terceira Guerra Púnica.</p>
+                <p> O termo "púnica" deriva do latim punici, usado pelos romanos para se referir aos cartagineses, que tinham origens fenícias.</p>
+            </lu>
+            <h1>QUESTÃO AGRÁRIA</h1>
+            <p>Um dos principais problemas enfrentados pelos políticos romanos era a questão da terra, que estava intimamente ligada à desigualdade social que afetava grande parte da população. Para tentar resolver essa crise, <strong>os irmãos Tibério e Caio Graco</strong>, que foram eleitos sucessivamente como tribunos da plebe, buscaram implementar reformas destinadas a atender às demandas populares e aliviar a desigualdade agrária.</p>
+            <p>Em 133 a.C., Tibério Graco conseguiu que uma lei agrária fosse aprovada, a qual estabeleceu um limite para o tamanho das propriedades privadas da nobreza e permitiu a redistribuição de terras públicas para os cidadãos menos afortunados. Essa medida provocou a oposição dos grandes proprietários, que se opuseram à sua implementação. No ano seguinte, em 132 a.C., Tibério Graco e cerca de 500 de seus apoiadores foram assassinados.</p>
+        </div>
+        <div>
+            <a href="../conteudos/monarquia.html" class="contact-btn">VOLTAR</a>
+            <a href="../conteudos/imperio.html" class="contact-btn" style="right: 80px;">PRÓXIMO</a>
+        </div>
+    </div>
 </body>
 </html>
