--- a/conteudos/imperio.html
+++ b/conteudos/imperio.html
@@ -36,7 +36,7 @@
 
     <div>
         <a href="../conteudos/republica.html" class="contact-btn">VOLTAR</a>
-        <a href="../conteudos/violencia.html" class="contact-btn" style="right: 80px">PRÓXIMO</a>
+        <a href="../conteudos/entretenimento.html" class="contact-btn" style="right: 80px">PRÓXIMO</a>
     </div>
     </div>
         
