--- a/conteudos/entretenimento.html
+++ b/conteudos/entretenimento.html
@@ -43,16 +43,9 @@
             <p>Cinema não mostra gladiador com fidelidade, diz estudo, Folha Online. 23 lev, 2006. Disponivel em www.folha.uol.com.br </p>
             <p style="text-decoration: overline;">Acesso em set. 2024</p>
         </div>
-        
-
-
-
-
-
-
         <div>
             <a href="../conteudos/imperio.html" class="contact-btn">VOLTAR</a>
-            <a href="../conteudos/violencia.html" class="contact-btn" style="right: 80px">PRÓXIMO</a>
+            <a href="../conteudos/violencia_em_roma.html" class="contact-btn" style="right: 80px">PRÓXIMO</a>
         </div>
     </div>
 </body>
