--- a/barra_de_menu/referencias.html
+++ b/barra_de_menu/referencias.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Referências</title>
-    <link rel="stylesheet" href="../estilo.css">
+    <link rel="stylesheet" href="../estilo_conteudo.css">
+
 </head>
 <body>
+    <div class="margem">
+        <h1>REFERÊNCIAS</h1>
+        <lu>
+            <li style="margin-top: 15px;">https://www.scielo.br/j/his/a/QFhVNgRtjsXmVZZNVJDnQXv/</li>
+            <li style="margin-top: 15px;">https://maniadehistoria.wordpress.com/violencia-em-roma/</li>
+            <li style="margin-top: 15px;">https://www.comciencia.br/punicao-exemplar-crime-e-castigo-na-idade-antiga/</li>
+            <li style="margin-top: 15px;">https://escolakids.uol.com.br/historia/guerras-punicas-roma-vs-cartago.htm#:~:text=Foram%20motivadas%20pelo%20controle%20do,aceitar%20pesados%20termos%20dos%20romanos</li>
+            <li style="margin-top: 15px;">https://mundoeducacao.uol.com.br/historiageral/invasoes-barbaras.htm#:~:text=Um%20dos%20motivos%20era%20a,com%20viol%C3%AAncia%20contra%20os%20civilizados</li>
+            <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/vandalos-violencia-contra-imperio-romano.htm</li>
+            <li style="margin-top: 15px;">https://maniadehistoria.wordpress.com/violencia-em-roma/</li>
+            <li style="margin-top: 15px;">https://www.comciencia.br/punicao-exemplar-crime-e-castigo-na-idade-antiga/</li>
+            <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/roma-antiga.htm</li>
+            <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/roma-periodo-monarquico.htm</li>
+            <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/arte-romana.htm</li>
+            <li style="margin-top: 15px;">https://www.todamateria.com.br/arte-romana/</li>
+        </lu>
+        <div></div>
+            <a href="../index.html" class="contact-btn">MENU</a>
+    
+        </div>
+    </div>
     
 </body>
 </html>
