--- a/conteudos/violencia.html
+++ b/conteudos/violencia.html
@@ -14,10 +14,9 @@
             <p style="text-align: center; font-size: 20px;">Os assuntos abordados anteriormente servem para proporcionar uma melhor compreensão dos temas que serão discutidos nos próximos tópicos.</p>
             <p style="text-align: center; font-size: 20px;">Apesar das mudanças significativas no contexto histórico e social desde o Império Romano, alguns aspectos da violência e suas implicações continuam relevantes para a compreensão de questões contemporâneas.</p>
         </div>
-
-
-
-        
-        
+        <div>
+            <a href="../conteudos/violencia_em_roma.html" class="contact-btn">VOLTAR</a>
+            <a href="../conteudos/formasDeviolencia.html" class="contact-btn" style="right: 80px">PRÓXIMO</a>
+        </div>
 </body>
 </html>
