--- a/conteudos/violencia_em_roma.html
+++ b/conteudos/violencia_em_roma.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../estilo_conteudo.css">
 </head>
 <body>
-    <div>
+    <div class="margem">
         <div class="titulo">
             <h2>VIOLÊNCIA EM ROMA</h2>
         </div>
