--- a/conteudos/monarquia.html
+++ b/conteudos/monarquia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Períodos</title>
+    <title>MONARQUIA</title>
     <link rel="stylesheet" href="../estilo_conteudo.css">
 </head>
 <body>
