--- a/barra_de_menu/referencias.html
+++ b/barra_de_menu/referencias.html
@@ -23,6 +23,7 @@
             <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/roma-periodo-monarquico.htm</li>
             <li style="margin-top: 15px;">https://brasilescola.uol.com.br/historiag/arte-romana.htm</li>
             <li style="margin-top: 15px;">https://www.todamateria.com.br/arte-romana/</li>
+            <li style="margin-top: 15px;">LIVRO: História das cavernas ao terceiro milênio - AUTORAS: Patricia Ramos Braick e Myriam Becho Mota</li>
         </lu>
         <div></div>
             <a href="../index.html" class="contact-btn">MENU</a>
